--- a/style.css
+++ b/style.css
@@ -16,6 +16,22 @@ html {
 
 /* HEADER */
 
+.header {
+    position: relative;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: white;
+    padding: calc(2vw + 1vh);
+    font-size: calc(3vw + 3vh + 10px);
+    height: 93%;
+    min-height: 33vw;
+    background-image: radial-gradient(
+        ellipse 9em 80vh at 0.5em 0.5em,
+        rgba(58, 37, 33, 0.9),
+        rgba(58, 37, 33, 0)
+    );
+}
+
 .header__backgroundPreview,
 .header__background {
   position: absolute;
@@ -44,23 +60,6 @@ html {
 
 .header__background--hidden {
   opacity: 0;
-}
-
-
-/* HEADER */
-
-.header {
-    font-weight: 900;
-    text-transform: uppercase;
-    color: white;
-    padding: calc(2vw + 1vh);
-    font-size: calc(3vw + 3vh + 10px);
-    height: 100%;
-    background-image: radial-gradient(
-        ellipse 9em 80vh at 0.5em 0.5em,
-        rgba(58, 37, 33, 0.9),
-        rgba(58, 37, 33, 0)
-    );
 }
 
 .header__layout {
