--- a/style.css
+++ b/style.css
@@ -548,8 +548,8 @@ html {
 }
 
 .footer__sectionContent {
-    padding-top: 1em;
-    padding-bottom: 1em;
+    padding-top: calc(2vw + 1vh);
+    padding-bottom: calc(2vw + 1vh);
 }
 
 @media screen and (min-width: 9999px) {
@@ -580,12 +580,23 @@ html {
 
     .footer__filler {
         width: 50%;
-        background-image:
-            linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)),
-            url(/images/footer-filler.jpg);
         background-position: center center;
         background-size: cover;
         flex-grow: 20;
+    }
+
+    .footer__filler--image1 {
+        background-image: url(/images/footer-filler-image-1.jpg);
+    }
+
+    .footer__filler--image2 {
+        background-image:
+            linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)),
+            url(/images/footer-filler-image-2.jpg);
+    }
+
+    .footer__section > img {
+        display: none;
     }
 }
 
